syntax = "proto3";

package controlplane.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sebastianm/flowgentic/internal/proto/gen/controlplane/v1;controlplanev1";

// AgentRunService provides read access to agent run records.
// Agent runs are created as a side effect of CreateThread (not via a dedicated RPC).
service AgentRunService {
  // GetAgentRun returns a single agent run by ID.
  rpc GetAgentRun(GetAgentRunRequest) returns (GetAgentRunResponse) {}

  // ListAgentRuns returns all agent runs for a given thread.
  rpc ListAgentRuns(ListAgentRunsRequest) returns (ListAgentRunsResponse) {}
}

// AgentRunConfig describes an agent run record.
message AgentRunConfig {
  string id = 1;
  string thread_id = 2;
  string worker_id = 3;
  string prompt = 4;
  string status = 5;
  string agent = 6;
  string model = 7;
  string mode = 8;
  bool yolo = 9;
  string session_id = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message GetAgentRunRequest {
  string id = 1;
}

message GetAgentRunResponse {
  AgentRunConfig agent_run = 1;
}

message ListAgentRunsRequest {
  string thread_id = 1;
}

message ListAgentRunsResponse {
  repeated AgentRunConfig agent_runs = 1;
}
